<resources>

    <!-- Activity titles -->
    <string name="title_activity_main">Map</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_login">Login</string>
    <!-- Activity titles end -->

    <string name="app_name">CacheMeIfYouCan</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Username</string>
    <string name="nav_header_subtitle">Noe Profile Info</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="settings">Settings</string>
    <string name="achievements">Achievements</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter caches</string>

    <string name="create_user">Create user</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up_button">Sign up button</string>
    <string name="login_button">Login button</string>
    <string name="logo">Logo</string>
    <string name="write_username">Write username</string>
    <string name="enter_username">Enter username</string>
    <string name="enter_password">Enter password</string>
    <string name="name">Name</string>
    <string name="sign_up">sign_up</string>
    <string name="sign_up_btn">Sign up</string>
    <string name="er_username">Username</string>
    <string name="btn_login_in">Login in</string>
    <string name="toast_save_cache_failed">Save cache failed</string>
    <string name="toast_failed_to_find_cache">Failed to find cache.</string>

    <!-- Weather -->
    <string name="openWeather_appId">9b6fa263a126cfce8d04a650063cb914</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01c;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>
    <string name="cache_title_hint">Cache Title</string>
    <string name="mark_cache_as_found">Mark as found</string>
    <string name="save_cache">Save Cache</string>
    <string name="weather_button_text">Weather</string>
    <!-- Weather end -->

    <string name="app_logo">App logo</string>
    <string name="signUp_username">Username</string>
    <string name="signUp_password">Password</string>
    <string name="signUp_signup">Sign up</string>
    <string name="ExistingUser_login">Login</string>
    <string name="latitude_hint">Latitude</string>
    <string name="longitude_hint">Longitude</string>
    <string name="description_hint">Description</string>
    <string name="cache_creator">Cache creator</string>

</resources>
