<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".ExistingUserActivity">

    <EditText
        android:id="@+id/activity_existingUser_tv_username"
        android:layout_width="334dp"
        android:layout_height="48dp"
        android:layout_marginStart="26dp"
        android:layout_marginTop="85dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="20dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/enter_username"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:text="Username"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/activity_existingUser_tv_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activity_existingUser_tv_password"
        android:layout_width="332dp"
        android:layout_height="44dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="44dp"
        android:background="#FFFFFF"
        android:contentDescription="@string/enter_password"
        android:ems="10"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:text="@string/password"
        android:textColor="#000000"
        app:layout_constraintBottom_toTopOf="@+id/activity_existingUser_btn_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_existingUser_tv_username" />

    <Button
        android:id="@+id/activity_existingUser_btn_login"
        android:layout_width="175dp"
        android:layout_height="60dp"
        android:layout_marginStart="130dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="166dp"
        android:layout_marginBottom="192dp"
        android:background="#00BFFF"
        android:text="Login in"
        android:textColor="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/activity_existingUser_tv_password"
        app:layout_constraintVertical_bias="0.318" />
</android.support.constraint.ConstraintLayout>